--- a/Task1/index.html
+++ b/Task1/index.html
@@ -6,5 +6,12 @@
     <title>Task1</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      // header section
+      <div class="header">
+        <h1>NEWS</h1>
+      </div>
+    </div>
+  </body>
 </html>
