--- a/Task1/index.html
+++ b/Task1/index.html
@@ -8,9 +8,14 @@
   </head>
   <body>
     <div class="container">
-      // header section
+      <!-- Header Section -->
       <div class="header">
         <h1>NEWS</h1>
+        <small>Lorem ipsum dolor sit amet.</small>
+        <div class="hastag">
+          #12 - Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero,
+          amet?
+        </div>
       </div>
     </div>
   </body>
