--- a/Task1/index.html
+++ b/Task1/index.html
@@ -10,11 +10,20 @@
     <div class="container">
       <!-- Header Section -->
       <div class="header">
-        <h1>NEWS</h1>
-        <small>Lorem ipsum dolor sit amet.</small>
-        <div class="hastag">
-          #12 - Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero,
-          amet?
+        <div class="header-left">
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Reiciendis, omnis.
+          </p>
+        </div>
+
+        <div class="header-center">
+          <h1>NEWS</h1>
+          <p class="subtitle">Lorem ipsum dolor sit amet.</p>
+        </div>
+
+        <div class="header-right">
+          <p class="issue">Lorem ipsum dolor sit amet consectetur.</p>
         </div>
       </div>
 
