--- a/Task1/index.html
+++ b/Task1/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="header-right">
-          <p class="issue">Lorem ipsum dolor sit amet consectetur.</p>
+          <p class="issue">#12 Lorem ipsum dolor sit amet consectetur.</p>
         </div>
       </div>
 
