Image path changed

--- a/Task1/index.html
+++ b/Task1/index.html
@@ -56,7 +56,7 @@
               quibusdam illo in ab saepe! Tempora facilis sint minima assumenda
               fugit!
             </p>
-            <img style="min-width: 25%" src="../dummyImage.jpg" alt="Image" />
+            <img style="min-width: 25%" src="./dummyImage.jpg" alt="Image" />
           </div>
 
           <div class="grid-lower">
